@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="C:/Users/ジョーレン　コームズ/Workspace/Eclipse/lib/Permissions.jar"/>
-	<classpathentry kind="lib" path="C:/Users/ジョーレン　コームズ/Workspace/Eclipse/lib/bukkit-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ジョーレン　コームズ/Workspace/Eclipse/lib/bukkit-1.0.0-R1-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
